[package]
name = "gtk-rs-runtime-tests"
version = "0.1.0"
authors = ["Evgenii Pashkin <eapashkin@gmail.com>"]
license = "MIT"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
